svc-zlb.yml
apiVersion: v1
kind: Service
metadata:
  name: zlb
  namespace: zlb
spec:
  type: ClusterIP
  ports:
  - port: 444
    targetPort: 444
  selector:
    app: zlb
