zlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zlb-nodeport
  namespace: zlb
spec:
  type: NodePort
  ports:
  - port: 444
#    targetPort: 444
  selector:
    app: zlb
