dev-to-delete.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: dev
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dev
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: dev.focus.com.tn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev
            port:
              number: 80
