ing-todelete.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: dev.focus.com.tn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-nodeport
            port:
              number: 80
