zlb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zlb-ingress
  namespace: zlb
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: zlb.focus.com.tn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zlb
            port:
              number: 444
